# entropiaorme

./: .coderabbit.yaml  .gitattributes  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Caddyfile  Corefile  README.md  SECURITY.md  TESTING.md  THIRD-PARTY-NOTICES.md  coverage.json  justfile  launch.bat  launch.ps1  mutation.json  pyproject.toml
.github/: dependabot.yml
frontend/src-tauri/: Cargo.toml  README.md  build-dev-config.mjs  deny.toml  tauri.conf.json  tauri.dev.conf.json
frontend/src-tauri/.cargo/: audit.toml  config.toml  mutants.toml
frontend/src-tauri/.config/: nextest.toml
frontend/src-tauri/contracts/: openapi.snapshot.json
frontend/src-tauri/entropia-orme/: Cargo.toml  README.md  build-dev-config.mjs  build-dev-config.test.ts  tauri.conf.json  tauri.dev.conf.json  tauri.e2e.conf.json
frontend/src-tauri/entropia-orme/capabilities/: default.json
frontend/src-tauri/entropia-orme/icons/: icon.icns
frontend/src-tauri/entropia-orme/installer/: LICENSE.txt  main.wxs
frontend/src-tauri/entropia-orme/installer/burn/: bundle.wxs  compose-art.py  theme.thm  theme.wxl
frontend/src-tauri/entropia-orme/installer/burn/bafunctions/: README.md  bafunctions.cpp  build.ps1  precomp.h
frontend/src-tauri/entropia-orme/resources/ort/: PROVENANCE.txt
frontend/src-tauri/entropia-orme/resources/snapshot/: absorbers.json  enhancers.json  medical_tools.json  professions.json  skill_ranks.json  stimulants.json  weapon_amplifiers.json  weapon_vision_attachments.json
frontend/src-tauri/entropia-orme/src/: composition.rs  crash.rs  e2e_stub.rs  lib.rs  main.rs  resources.rs  telemetry.rs  updater.rs
frontend/src-tauri/eo-http/: Cargo.toml
frontend/src-tauri/eo-http/resources/: mid_hunt_fixture.json
frontend/src-tauri/eo-http/resources/demo_goldens/: analytics_activity.txt  analytics_inventory.txt  analytics_ledger.txt  analytics_ledger_presets.txt  analytics_overview_30d.txt  analytics_overview_all.txt  tracking_session_detail.txt  tracking_sessions.txt  tracking_snapshot.txt
frontend/src-tauri/eo-http/src/: analytics_routes.rs  arms.rs  body.rs  character_routes.rs  cors.rs  demo.rs  dev_routes.rs  equipment_routes.rs  extract.rs  hydration.rs  lib.rs  native.rs  producer_routes.rs  proxy.rs  pyjson.rs  scan_routes.rs  settings_routes.rs  sse.rs  tracking_routes.rs
frontend/src-tauri/eo-http/tests/: analytics_conformance.rs  analytics_writes_conformance.rs  blind_surface_shadow_diff.rs  extraction_conformance.rs  http_consistency_replay.rs  hydration_fidelity.rs  native_router.rs  proxy_fidelity.rs  proxy_substrate.rs  quest_link_conformance.rs  r3_conformance.rs  router_microbench.rs  scan_conformance.rs  settings_character_equipment_conformance.rs  settings_writes_conformance.rs  tracking_edits_conformance.rs  tracking_producer_conformance.rs  tracking_reads_conformance.rs  writes_conformance.rs
frontend/src-tauri/eo-services/: Cargo.toml
frontend/src-tauri/eo-services/benches/: ocr.rs  smoke.rs
frontend/src-tauri/eo-services/migrations/: 0001_schema_baseline.sql
frontend/src-tauri/eo-services/src/: character_calc.rs  chatlog_parser.rs  chatlog_watcher.rs  clock.rs  codex.rs  codex_categories.rs  config_service.rs  cost_engine.rs  db.rs  difflib.rs  eu_window.rs  event_bus.rs  fingerprint_recorder.rs  fuzzy_match.rs  game_data_store.rs  hotbar_listener.rs  keystroke_source.rs  lib.rs  loot_filter.rs  mob_lookup_service.rs  observability_config.rs  ocr_candle.rs  ocr_engine.rs  paths.rs  quests.rs  repair_ocr.rs  scan_completion.rs  scan_drift.rs  scan_presets.rs  screen_capture.rs  session_summary.rs  skill_panel.rs  skill_scan_manual.rs  skill_tracker.rs  spacebar_capture_listener.rs  tool_inference.rs  tracker.rs  tracking_models.rs  trifecta_service.rs  tt_value_curve.rs
frontend/src-tauri/eo-services/src/data/: tt_value_curve.csv
frontend/src-tauri/eo-services/tests/: chatlog_differential.rs  chatlog_watcher_differential.rs  codex_differential.rs  config_differential.rs  corpus_replay_oracle.rs  cost_differential.rs  db_replay_spike.rs  hotbar_listener_differential.rs  ocr_backend_comparison.rs  ocr_bench_differential.rs  quest_crud_differential.rs  quest_lifecycle_differential.rs  schema_conformance.rs  static_tables_differential.rs
frontend/src-tauri/eo-wire/: Cargo.toml
frontend/src-tauri/eo-wire/src/: bus.rs  db_snapshot.rs  domain_events.rs  fingerprint.rs  http_fingerprint.rs  lib.rs  metrics.rs  models.rs  normalizer.rs  sse.rs
frontend/src-tauri/eo-wire/tests/: conformance.rs  emitters_proof.rs  event_schema_conformance.rs  fuzz_differential.rs  openapi_conformance.rs  yml_family.rs
frontend/src-tauri/eo-wire/tests/fixtures/: normalizer_conformance.json
frontend/src-tauri/fixtures/corpus/recorded/placeholder_recorded_hunt/: build.py  metadata.yaml
frontend/src-tauri/fixtures/corpus/scripted/basic_hunt_10_events/: metadata.yaml
frontend/src-tauri/fixtures/corpus/scripted/consistency_codex_isolation_midpoint/: build.py  metadata.yaml
frontend/src-tauri/fixtures/corpus/scripted/consistency_quests_mission_lifecycle_midpoint/: metadata.yaml
frontend/src-tauri/fixtures/corpus/scripted/consistency_scan_isolation_midpoint/: build.py  metadata.yaml
frontend/src-tauri/fixtures/corpus/scripted/consistency_tracking_hunt_midpoint/: build.py  metadata.yaml
frontend/src-tauri/fixtures/corpus/scripted/crit_dodge_evade_jam/: metadata.yaml
frontend/src-tauri/fixtures/corpus/scripted/defensive_combat_round/: metadata.yaml
frontend/src-tauri/ratifications/: README.md  clock-seam-occurred-at.md  codex-unclaim-route.md  equivalence-golden-relocation.md  event-stream-bridge-goldens.md  event-stream-fingerprint-scenarios.md  global-item-and-hof-kill-corpus-coverage.md  hydration-only-tracking-surface.md  optimiser-hp-contribution-removal.md  quest-codex-snapshot-surface.md  recording-endpoints-removal.md
frontend/src-tauri/src/: lib.rs
frontend/src-tauri/xtask/: Cargo.toml
frontend/src-tauri/xtask/src/: authoring.rs  bump_version.rs  git.rs  main.rs  mutation_floors.rs  no_bare_setinterval.rs  ratify.rs  version_stamps.rs
(+598 files in other folders)
