# Tool configuration for the EntropiaOrme Python backend.
#
# Tool config only: runtime dependencies live in backend/requirements.txt (the
# manifest the PyInstaller freeze consumes) and dev/test tooling in
# backend/requirements-dev.txt. There is intentionally no [project] or
# [build-system] table: the backend ships as a PyInstaller-frozen sidecar, not
# an installable wheel, so adding packaging metadata would only risk confusing
# that pipeline.

[tool.ruff]
line-length = 88
target-version = "py311"
src = ["."]

[tool.ruff.lint]
# A curated, high-signal rule set: pycodestyle/pyflakes (E, F), import sorting
# (I), pyupgrade (UP), bugbear (B), comprehensions (C4), and simplify (SIM).
select = ["E", "F", "I", "UP", "B", "C4", "SIM"]
ignore = [
    # FastAPI's dependency-injection idiom puts Depends()/Query()/Path() in
    # argument defaults by design; bugbear's function-call-in-default check is
    # a false positive for it.
    "B008",
    # `ruff format` owns line length: it wraps code to line-length but leaves
    # strings, comments, and SQL literals intact rather than forcing breaks.
    # Enforcing E501 on top would only nag about those un-splittable lines.
    "E501",
]

[tool.ruff.lint.isort]
known-first-party = ["backend"]

[tool.ruff.lint.per-file-ignores]
# main.py loads .env.local and sets process priority / UTF-8 mode before the
# heavy module imports run, so its imports are deliberately not all at the top.
"backend/main.py" = ["E402"]

[tool.pytest.ini_options]
testpaths = ["backend/tests"]
addopts = "--strict-markers --strict-config"
markers = [
    "fast: pure-logic, in-memory, sub-second tests (run on every PR)",
    "standard: db / filesystem / in-process-stateful tests (run on every PR)",
    "full: device / OCR / listener-touching or slow tests (run nightly, not on PRs)",
]

[tool.coverage.run]
# Branch coverage (not just line coverage): partial branches count, so the
# branch figure sits below the line figure by design.
branch = true
source = ["backend"]
# Store paths relative to the repo root so the coverage.xml that diff-cover
# reads resolves identically on a CI runner and a local checkout.
relative_files = true
# Device / IO / script modules that cannot be unit-covered without a real
# device or display, plus the test files themselves. These are run but not
# measured, so the floor reflects testable logic rather than hardware glue.
omit = [
    "backend/tests/*",
    "backend/scripts/demo_seed/*",
    "backend/build_app.py",
    "backend/ocr/capturer.py",
    "backend/services/eu_window.py",
    "backend/services/hotbar_listener.py",
    "backend/services/spacebar_capture_listener.py",
    "backend/services/local_ocr.py",
    "backend/services/repair_ocr.py",
    "backend/services/scan_presets.py",
    "backend/services/skill_scan_manual.py",
]

[tool.coverage.report]
show_missing = true
skip_covered = false
# Defensive / unreachable lines that should not count against the floor.
exclude_also = [
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "\\.\\.\\.",
]
# Floor set 3 points below the measured branch coverage (47%) of the
# testable surface, leaving ratchet headroom and avoiding a day-one red. The
# router layer and main.py sit in the denominator uncovered for now; as their
# tests land, this figure climbs and the floor is tightened to track it.
# Never lower a landed floor to make a red gate pass.
fail_under = 44
