[package]
name = "entropia-orme"
version.workspace = true
description = "EntropiaOrme: an analytical desktop tool for Entropia Universe."
authors.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[lib]
name = "entropia_orme_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { workspace = true }

[dependencies]
tauri = { workspace = true }
tauri-plugin-shell = { workspace = true }
tauri-plugin-store = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
eo-http = { workspace = true }
# The composition root constructs the ported services the substrate's
# native routes read through.
eo-services = { workspace = true }
tokio = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
# Test-only: the composition-integration and concurrency tests assert
# directly against the substrate's database pool and build a frozen clock.
sqlx = { workspace = true }
chrono = { workspace = true }

[target.'cfg(windows)'.dependencies]
windows = { workspace = true, features = [
  "Win32_Foundation",
  "Win32_System_LibraryLoader",
  "Win32_UI_HiDpi",
  "Win32_UI_WindowsAndMessaging"
] }
